--- a/src/Netnr.TencentAI/Netnr.TencentAI.Test/Netnr.TencentAI.Test.csproj
+++ b/src/Netnr.TencentAI/Netnr.TencentAI.Test/Netnr.TencentAI.Test.csproj
@@ -43,6 +43,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Nlp.cs" />
+    <Compile Include="Aai.cs" />
+    <Compile Include="Ocr.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
