--- a/src/Netnr.TencentAI/Netnr.TencentAI/Netnr.TencentAI.csproj
+++ b/src/Netnr.TencentAI/Netnr.TencentAI/Netnr.TencentAI.csproj
@@ -4,8 +4,16 @@
     <TargetFrameworks>net40;netstandard2.0</TargetFrameworks>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net40|AnyCPU'">
+    <DefineConstants>TRACE;DEBUG;net40</DefineConstants>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
+  </ItemGroup>
+
+  <ItemGroup Condition="'$(TargetFramework)' == 'net40'">
+    <Reference Include="System.Web" />
   </ItemGroup>
 
 </Project>
