--- a/src/Netnr.TencentAI/Netnr.TencentAI.Test/Netnr.TencentAI.Test.csproj
+++ b/src/Netnr.TencentAI/Netnr.TencentAI.Test/Netnr.TencentAI.Test.csproj
@@ -43,11 +43,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Face.cs" />
+    <Compile Include="Image.cs" />
     <Compile Include="Nlp.cs" />
     <Compile Include="Aai.cs" />
     <Compile Include="Ocr.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Vision.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
