--- a/src/Netnr.TencentAI/Netnr.TencentAI/Netnr.TencentAI.csproj
+++ b/src/Netnr.TencentAI/Netnr.TencentAI/Netnr.TencentAI.csproj
@@ -3,13 +3,16 @@
   <PropertyGroup>
     <TargetFrameworks>net40;netstandard2.0</TargetFrameworks>
     <Description>Tencent AI SDK</Description>
-    <Copyright />
-    <PackageLicenseUrl>https://github.com/netnr/Netnr.TencentAI/blob/master/LICENSE</PackageLicenseUrl>
+    <Copyright>netnr</Copyright>
     <PackageProjectUrl>https://github.com/netnr/Netnr.TencentAI</PackageProjectUrl>
     <PackageIconUrl>https://raw.githubusercontent.com/netnr/static/master/favicon.ico</PackageIconUrl>
     <PackageTags>netnr Tencent AI</PackageTags>
     <PackageReleaseNotes>支持 .net core 与 .net framework</PackageReleaseNotes>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <DocumentationFile>H:\ROOM\Netnr.TencentAI\src\Netnr.TencentAI\Netnr.TencentAI\Netnr.TencentAI.xml</DocumentationFile>
+    <Version>1.0.0-beta1</Version>
+    <PackageLicenseUrl>https://github.com/netnr/Netnr.TencentAI/blob/master/LICENSE</PackageLicenseUrl>
+    <Authors>netnr</Authors>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net40|AnyCPU'">
