--- a/src/Netnr.TencentAI/Netnr.TencentAI/Netnr.TencentAI.csproj
+++ b/src/Netnr.TencentAI/Netnr.TencentAI/Netnr.TencentAI.csproj
@@ -7,10 +7,10 @@
     <PackageProjectUrl>https://github.com/netnr/Netnr.TencentAI</PackageProjectUrl>
     <PackageIconUrl>https://raw.githubusercontent.com/netnr/static/master/favicon.ico</PackageIconUrl>
     <PackageTags>netnr Tencent AI</PackageTags>
-    <PackageReleaseNotes>支持 .net core 与 .net framework</PackageReleaseNotes>
+    <PackageReleaseNotes>修改项目依赖 Netnr.Core 常用的类库，项目整合</PackageReleaseNotes>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <DocumentationFile>H:\ROOM\Netnr.TencentAI\src\Netnr.TencentAI\Netnr.TencentAI\Netnr.TencentAI.xml</DocumentationFile>
-    <Version>1.0.0-beta1</Version>
+    <Version>1.0.0</Version>
     <PackageLicenseUrl>https://github.com/netnr/Netnr.TencentAI/blob/master/LICENSE</PackageLicenseUrl>
     <Authors>netnr</Authors>
   </PropertyGroup>
@@ -20,6 +20,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Netnr.Core" Version="1.0.2" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
   </ItemGroup>
 
